[package]
name = "haydayta"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
good_lp = { version = "1.15.1", features = ["highs"] }
nom = "8.0.0"
parsoid = "0.11.0-rc.1"
scraper = "0.26.0"
tokio = { version = "1.52.1", features = ["full"] }
petgraph = "0.8.3"
tabular = "0.2.0"
url = "2.5.8"
